--- a/src/components/Thread/Thread.css
+++ b/src/components/Thread/Thread.css
@@ -1,10 +1,10 @@
-.commentsContainer {
+.comments-container {
   display: flex;
   flex-direction: column;
   align-items: center;
 }
 
-.commentsContainer textarea {
+.comments-container textarea {
   min-width: 320px;
   max-width: 560px;
   margin: 0 auto;
